--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/uniquid/aws-virtual-device-js#readme",
   "dependencies": {
-    "@uniquid/uidcore": "git+https://github.com/uniquid/uidcore-js.git#feature/litecoin"
+    "@uniquid/uidcore": "git+https://github.com/uniquid/uidcore-js.git#feature/litecoin",
+    "aws-iot-device-sdk": "^2.2.1",
+    "inquirer": "^6.2.0"
   }
 }
