--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "virtual-device": "node index.js"
+    "virtual-device": "node index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,6 @@
   "homepage": "https://github.com/uniquid/aws-virtual-device-js#readme",
   "dependencies": {
     "@uniquid/uidcore": "git+https://github.com/uniquid/uidcore-js.git#feature/litecoin",
-    "aws-iot-device-sdk": "^2.2.1",
-    "varuint-bitcoin": "^1.1.0"
+    "aws-iot-device-sdk": "^2.2.1"
   }
 }
