--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "aws-virtual-device",
   "version": "1.0.0",
   "description": "- Node 8",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "virtual-device": "node index.js",
-    "start": "node index.js"
+    "virtual-device": "node main.js",
+    "start": "node main.js"
   },
   "repository": {
     "type": "git",
