--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "virtual-device": "node main.js",
-    "start": "node main.js"
+    "start": "node main.js",
+    "dl-headers": "./.bin/dl-headers",
+    "install-headers": "./.bin/install-headers",
+    "extract-headers": "./.bin/extract-headers"
   },
   "repository": {
     "type": "git",
