--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "homepage": "https://github.com/uniquid/aws-virtual-device-js#readme",
   "dependencies": {
-    "@uniquid/uidcore": "git+https://github.com/uniquid/uidcore-js.git#0.1.4",
+    "@uniquid/uidcore": "git+https://github.com/uniquid/uidcore-js.git#v0.1.4",
     "aws-iot-device-sdk": "^2.2.1"
   }
 }
