--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "virtual-device": "node main.js",
-    "start": "node main.js",
-    "dl-headers": "./.bin/dl-headers",
-    "install-headers": "./.bin/install-headers",
-    "extract-headers": "./.bin/extract-headers"
+    "start": "node main.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +19,7 @@
   },
   "homepage": "https://github.com/uniquid/aws-virtual-device-js#readme",
   "dependencies": {
-    "@uniquid/uidcore": "git+https://github.com/uniquid/uidcore-js.git#0.1.4",
+    "@uniquid/uidcore": "git+https://github.com/uniquid/uidcore-js.git#develop",
     "aws-iot-device-sdk": "^2.2.1"
   }
 }
