--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/uniquid/aws-virtual-device-js#readme",
   "dependencies": {
-    "@uniquid/uidcore": "git+https://github.com/uniquid/uidcore-js.git#develop",
+    "@uniquid/uidcore": "git+https://github.com/uniquid/uidcore-js.git#v0.1.4",
     "aws-iot-device-sdk": "^2.2.1"
   }
 }
